<resources>
    <string name="app_name">7MWorkout</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="exercise_image">Exercise image</string>
    <string name="finish">Finish</string>
    <string name="finish_workout">Congratulations! You have completed the 7 minutes workout!</string>
    <string name="end">END</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirmation_question">Are you sure?</string>
    <string name="confirmation_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="bmi">BMI</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_lbs">WEIGHT (in lbs)</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="cal_image">cal_image</string>
    <string name="history">History</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="calculator">Calculator</string>
</resources>