<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirmation_question"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:gravity="center"
        android:text="@string/confirmation_quit"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:background="@color/colorLightPurple"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_weight="1"
            android:background="@color/colorLightPurple"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>
</LinearLayout>